--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/charm": "^5.2.5",
+    "@fontsource/playfair-display": "^5.2.5",
+    "lucide-react": "^0.488.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.23.0"
