--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "dependencies": {
     "@fontsource/charm": "^5.2.5",
     "@fontsource/playfair-display": "^5.2.5",
+    "emailjs-com": "^3.2.0",
     "lucide-react": "^0.488.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
